--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>DC Quiz!</h1>
+    <h1>DC Quiz about JavaScript!</h1>
     <div>
-      <h3>You can choose dark mode or light mode</h3>
-      <button id="change-background">Change background!</button>
+      
+      <button id="change-background">dark mode or light mode!</button>
     </div>
     <legend></legend>
     <div id="quiz">
       <div id="question1">
         <form>
-          <p>1. *****</p>
+          <p id=p1>1. A Function Associated With An object is Called link:</p>
           <input type="radio" id="answer" name="question1" />
           <label for="">True</label>
           <input type="radio" id="answer" name="question1" value="correct" />
@@ -26,7 +26,7 @@
 
       <div>
         <form id="question2">
-          <p>2. *****</p>
+          <p id=p2>2. JavaScript File Has An Extension of .js:</p>
           <input type="radio" id="answer" name="question2" value="correct" />
           <label for="">True</label>
           <input type="radio" id="answer" name="question2" />
@@ -36,7 +36,7 @@
 
       <div>
         <form id="question3">
-          <p>3.****</p>
+          <p id=p3>3.JavaScript File Has An Extension of .java:</p>
           <input type="radio" id="answer" name="question3" />
           <label for="">True</label>
           <input type="radio" id="answer" name="question3" value="correct" />
@@ -46,57 +46,58 @@
 
       <div>
         <form id="question4">
-          <p>4. ******</p>
+          <p id=p4>4.GetMonth() returns The Month as:</p>
           <input type="radio" id="answer" name="question4" />
-          <label for="">1: O</label>
+          <label for="">1:String</label>
           <input type="radio" id="answer" name="question4" />
-          <label for="">2: I</label>
+          <label for="">2:Float</label>
           <input type="radio" id="answer" name="question4" value="correct" />
-          <label for="">3: U</label>
+          <label for="">3:Int</label>
         </form>
       </div>
 
       <div>
         <form id="question5">
-          <p>5. *****'</p>
+          <p id=p5>5.Method Prompt() Contain ........Number of Parameters.</p>
           <input type="radio" id="answer" name="question5" value="correct" />
-          <label for="">1: D</label>
+          <label for="">1:Tow</label>
           <input type="radio" id="answer" name="question5" />
-          <label for="">2: S</label>
+          <label for="">2:One</label>
           <input type="radio" id="answer" name="question5" />
-          <label for="">3: A</label>
+          <label for="">3:Three</label>
         </form>
       </div>
 
       <div>
         <form id="question6">
-          <p>6. *****'</p>
+          <p id=p6>6.Which Of The Dialog Box Display a Message And a Data Entry Field?</p>
           <input type="radio" id="answer" name="question6" />
-          <label for="">1: H</label>
+          <label for="">1:Confirm()</label>
           <input type="radio" id="answer" name="question6" />
-          <label for="">2: G</label>
+          <label for="">2:Alert()</label>
           <input type="radio" id="answer" name="question6" value="correct" />
-          <label for="">3: F</label>
+          <label for="">3:Prompt()</label>
         </form>
       </div>
 
       <div>
         <form id="question7">
-          <p>7. *******</p>
+          <p id=p7>7.Inside which HTML element do we put the JavaScript?</p>
           <input type="checkbox" id="no" />
-          <label for="">3: M</label>
+          <label for="">3:Scripting</label>
           <input type="checkbox" id="no" />
-          <label for="">2: B</label>
+          <label for="">2:Script</label>
           <input type="checkbox" id="ja" />
-          <label for="">3: V</label>
+          <label for="">3:javaScript</label>
           <input type="checkbox" id="ja1" />
-          <label for="">4: C</label>
+          <label for="">4:js</label>
         </form> 
       </div>
 
       <div>
       <p id="message"></p>
     </div>
+    <button id="reload">Click here to redo quiz!</button>
     <script src="main.js"></script>
   </body>
 </html>
